# modular_free_rtos_build

./: .cproject  .project  build.sh
app/blinky/: CMakeLists.txt  blinky_bld.mk  main.c
app/led_switcher/: led_switcher_bld.mk  led_switcher_inc.mk  main.c
app/queue_test/: queue_test_bld.mk  queue_test_inc.mk
apps/blinky/: blinky.mk  blinky_bld.mk  blinky_inc.mk  main.c
apps/led_switcher/: led_switcher_bld.mk  led_switcher_inc.mk  main.c
arch/ARM_CM3/: ARM_CM3.mk  ARM_CM3_inc.mk  CMakeLists.txt
cmake/: macro.cmake
doc/: Project structure.odg
drivers/STM32L1xx_STD_PERIPH/: STM32L1xx_STD_PERIPH_bld.mk  STM32L1xx_STD_PERIPH_inc.mk
drivers/STM32L1xx_STD_PERIPH/STM32L1xx_Std_Periph/: CMakeLists.txt  STM32L1xx_Std_Periph_bld.mk  STM32L1xx_Std_Periph_inc.mk
drivers/STM32L1xx_STD_PERIPH/STM32L1xx_Std_Periph/inc/: stm32l1xx_conf.h
drivers/STM32L1xx_STD_PERIPH/inc/: stm32l1xx_conf.h
drivers/STM32L1xx_STD_PERIPH/inc/stash/: stm32l1xx_conf.h
drivers/STM32L1xx_STD_PERIPH/led_driver/: led_driver_bld.mk  led_driver_inc.mk
drivers/STM32L1xx_STD_PERIPH/led_driver/inc/: led_control.h
drivers/STM32L1xx_STD_PERIPH/led_driver/src/: led_control.c
drivers/STM32L1xx_Std_Periph/inc/: stm32l1xx_conf.h
kernel/FreeRTOS/: CMakeLists.txt  FreeRTOS.mk  FreeRTOSConfig.h  FreeRTOS_bld.mk  FreeRTOS_inc.mk
kernel/FreeRTOS/Source/portable/GCC/ARM_CM3/: port.c
platform/STM32L152/: STM32L152.mk  STM32L152_inc.mk
platform/STM32L152/STM32L152/: CMakeLists.txt  STM32L152.mk  STM32L152_bld.mk  STM32L152_inc.mk
platform/STM32L152/STM32L152/inc/: stm32l1xx.h  system_stm32l1xx.h
platform/STM32L152/STM32L152/ld/: STM32L152XE_FLASH.ld
platform/STM32L152/src/: system_stm32l1xx.c
platform/stm32/common/: ldconf.cmake  startupconf.cmake
platform/stm32/common/ld_template/: link_template.ld
platform/stm32/common/startup_template/: startup_template.S
project/blinky/: CMakeLists.txt  Makefile  blank.c
project/queue_test/: Makefile
